# square-computation

./: .clang-format  CMakeLists.txt
include/geometry/: Point.h  Polygon.h  Triangle.h  Vector2.h
src/: CMakeLists.txt  main.cpp
src/geometry/: CMakeLists.txt  Point.cpp  Polygon.cpp  Triangle.cpp  Vector2.cpp
tests/: CMakeLists.txt  test_point.cpp  test_polygon.cpp  test_triangle.cpp  test_vector.cpp
